[package]
name = "svdpi"
version = "0.0.4"
edition = "2024"
rust-version = "1.85"
description = "Rust bindings for SystemVerilog DPI and VPI"
repository = "https://github.com/FanShupei/svdpi-rs"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
sv2023 = []
vpi = []

[package.metadata.docs.rs]
features = ["sv2023", "vpi"]
